--- a/src/App.css
+++ b/src/App.css
@@ -28,10 +28,16 @@
   color: #61dafb;
 }
 
+.card-body-stars li {
+  list-style-type: none;
+  display: inline;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
